# sentiment-analyser

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  logging_config.py  main.py  main_threaded.py  message_buffer.py  mq_messenger.py  mypy.ini  pyproject.toml  rabbitmq_monitor.py  schemas.py  test_agent_logging.py  test_websocket_manager.py  transformation.py  tweet-sample.json  unit-testing-plan.md  websocket_manager.py
.claude/agents/: docs-sync-agent.md  pr-code-reviewer.md
docs/: review-process.md  unit-testing-plan.md
examples/: PeaceTalksAnalyze.ipynb  sentiment-analyze.ipynb  tg_bots_dialog.ipynb
handlers/: __init__.py  close.py  connected.py  error.py  open.py  ping.py  tweet.py  unknown.py
src/config/: logfire_config.py  logging_config.py  sentiment_config.py
src/core/: message_buffer.py  mq_messenger.py  mq_subscriber.py  news_database.py  rabbitmq_monitor.py  sentiment_analyzer.py  transformation.py  websocket_manager.py
src/core/agents/: __init__.py  duplicate_detector_agent.py  firecrawl_agent.py  geo_expert_agent.py  image_search_agent.py  retry_wrapper.py  text_search_agent.py  topic_filter_agent.py  topic_sentiment_agent.py
src/core/utils/: __init__.py  address_validators.py
src/handlers/: __init__.py  close.py  connected.py  error.py  message_handler.py  open.py  ping.py  tweet.py  unknown.py
src/models/: schemas.py
tests/: __init__.py  conftest.py  test_address_validators.py  test_connection_management.py  test_error_handling.py  test_get_trade_action.py  test_initialization.py  test_integration.py  test_main_rabbitmq.py  test_message_buffer.py  test_message_handler.py  test_mq_messenger.py  test_mq_messenger_reconnect.py  test_mq_subscriber.py  test_mq_subscriber_reconnect.py  test_rabbitmq_monitor.py  test_retry_wrapper.py  test_signal_handler.py  test_threaded_message_handler.py  test_transformation.py  test_tweet_handler.py  test_tweet_handler_integration.py  test_websocket_lifecycle.py
tests/integration/: README.md  __init__.py  test_agents_integration.py  test_data.py
(+11 files in other folders)
