[project]
name = "news-povered-trading"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "websocket-client>=1.8.0",
    "structlog>=24.1.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pika>=1.3.2",
    "mypy>=1.8.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.9",
    "base58>=2.1.0",
    "nest-asyncio>=1.5.0",
    "syrupy>=4.6.0",
    "logfire>=1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requiring API keys)"
]
asyncio_mode = "auto"
