[project]
name = "news-povered-trading"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.1.1",
    "websocket-client==1.8.0",
    "structlog==25.4.0",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pytest-cov==6.2.1",
    "pytest-asyncio==1.1.0",
    "pika==1.3.2",
    "mypy==1.17.0",
    "pydantic==2.11.7",
    "pydantic-ai==0.4.10",
    "base58==2.1.1",
    "nest-asyncio==1.6.0",
    "syrupy==4.9.1",
    "logfire==4.0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requiring API keys)"
]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "INFO"
log_auto_indent = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
